--- a/src/WCCG.PAS.Referrals.UI/Pages/Index.cshtml
+++ b/src/WCCG.PAS.Referrals.UI/Pages/Index.cshtml
@@ -1,6 +1,8 @@
 @page
 @model WCCG.PAS.Referrals.UI.Pages.IndexModel
 
+<h2>Number of items - @Model.Referrals.Count()</h2>
+
 <table class="table table-hover fs-4">
   <thead>
   <tr>
@@ -10,7 +12,6 @@
   </tr>
   </thead>
   <tbody>
-  <h2>Number of items - @Model.Referrals.Count()</h2>
   @foreach (var referral in Model.Referrals)
   {
     <tr>
@@ -23,3 +24,11 @@
   }
   </tbody>
 </table>
+<div class="float-end mt-3">
+  @if (!string.IsNullOrEmpty(Model.ErrorMessage))
+  {
+    <p class="text-danger d-inline-block mt-2 mx-4 fs-5">
+      @Html.Raw(Model.ErrorMessage)
+    </p>
+  }
+</div>
