--- a/src/WCCG.PAS.Referrals.UI/Pages/Shared/_Layout.cshtml
+++ b/src/WCCG.PAS.Referrals.UI/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 
 <div class="header container">
   <a class="header-link" href="/">Referrals UI</a>
-  <partial name="_ApimSubscriptionKey"/>
+  <partial name="PartialViews/_ApimSubscriptionKey"/>
 </div>
 
 <div class="container">
