Added apim key field with all validations and error handlings (#3)
Added apim key field with all validations and error handlings

--- a/src/WCCG.PAS.Referrals.UI/Pages/Shared/_Layout.cshtml
+++ b/src/WCCG.PAS.Referrals.UI/Pages/Shared/_Layout.cshtml
@@ -11,9 +11,9 @@
 </head>
 <body>
 
-
 <div class="header container">
   <a class="header-link" href="/">Referrals UI</a>
+  <partial name="PartialViews/_ApimSubscriptionKey"/>
 </div>
 
 <div class="container">
